Mon Sep 20 13:21:33 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Contexts/Context.mpc:
        * ciao/Contexts/Extension/ExtensionContext.h:
        * ciao/Contexts/Session:
        * ciao/Contexts/Session/Context_Impl_T.h:
        * ciao/Contexts/Session/Context_Impl_T.cpp:
        * ciao/Contexts/Context_Impl_T.h:
        * ciao/Contexts/Context_Impl_T.cpp:
          Moved the SessionContext to its own directory so that we can
          add the ExtensionContext more easily

Mon Sep 20 09:32:28 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/Extension:
        * ccm/Extension/CCM_ClientContainerInterceptor.idl:
        * ccm/Extension/CCM_ClientContainerInterceptorRegistration.idl:
        * ccm/Extension/CCM_ContainerClientRequestInfo.idl:
        * ccm/Extension/CCM_ContainerRequestInfo.idl:
        * ccm/Extension/CCM_ContainerServantRequestInfo.idl:
        * ccm/Extension/CCM_ContainerServerRequestInfo.idl:
        * ccm/Extension/CCM_ContainerStubRequestInfo.idl:
        * ccm/Extension/CCM_ExtensionComponent.idl:
        * ccm/Extension/CCM_ExtensionContext.idl:
        * ccm/Extension/CCM_QoS.idl:
        * ccm/Extension/CCM_ServantContainerInterceptor.idl:
        * ccm/Extension/CCM_ServantContainerInterceptorRegistration.idl:
        * ccm/Extension/CCM_ServerContainerInterceptor.idl:
        * ccm/Extension/CCM_ServerContainerInterceptorRegistration.idl:
        * ccm/Extension/CCM_StubContainerInterceptor.idl:
        * ccm/Extension/CCM_StubContainerInterceptorRegistration.idl:
        * ciao/Extension/ExtensionContext.h:
        * ciao/Extension/ExtensionContext.cpp:
          Got these files from svn history, IDL for QoS4CCM

        * ciao/Servants/Home_Servant_Impl_T.cpp:
        * ciao/Servants/Servant_Impl_Base.h:
          Layout changes

Mon Sep 20 08:55:09 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/CCM_Context.idl: